--- a/css/exercise/1/style.css
+++ b/css/exercise/1/style.css
@@ -105,6 +105,12 @@ body {
   color: crimson;
   background-color: lavender;
   margin-right: 40px;
+  transition: all ease 0.1s;
+  cursor: pointer;
+}
+
+.today__button__like:hover {
+  transform: scale(1.1);
 }
 
 .today__button__watch {
@@ -113,6 +119,7 @@ body {
   border-radius: 5px;
   color: white;
   background-color: black;
+  cursor: pointer;
 }
 
 .top-movies-container {
@@ -126,13 +133,28 @@ body {
   display: none;
 }
 
+@keyframes to-gray {
+  0% {
+    filter: grayscale(0%);
+  }
+  100% {
+    filter: grayscale(100%);
+  }
+}
+
 .top-movie {
   width: 90px;
   margin-right: 20px;
   flex: 0 0 auto;
 }
 
+.top-movie__img:hover {
+  animation: to-gray 0.3s;
+  animation-fill-mode: forwards;
+}
+
 .top-movie__img {
+  cursor: pointer;
   width: 100%;
   height: 130px;
   border-radius: 6px;
