--- a/css/exercises/2_inflrean_flex/style.css
+++ b/css/exercises/2_inflrean_flex/style.css
@@ -2,22 +2,26 @@ body {
   background-color: rgb(218, 225, 226);
 }
 
-.header {
+.header__logo {
+  flex-shrink: 0;
+}
+
+.menu {
   display: flex;
   background-color: slateblue;
 }
 
-.header__item {
+.menu__item {
   width: 25%;
   transition: 0.5s;
 }
 
-.header__item:hover {
+.menu__item:hover {
   width: 30%;
   background-color: darkslateblue;
 }
 
-.header__link {
+.menu__link {
   display: block;
   color: white;
   text-decoration: none;
@@ -102,27 +106,22 @@ body {
   background-color: white;
 }
 
-@media (min-width: 600px) {
-  .card__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -1em;
-  }
-
-  .card__item {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    padding: 0 1em;
-  }
-
-  .card__item__text {
-    flex-grow: 1;
-  }
+.modal__container {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
-@media (min-width: 1200px) {
-  .card__item {
-    width: 33.333%;
-  }
+.modal__text {
+  width: 300px;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 0.5rem;
 }
