--- a/css/exercises/3_youtube/aside.css
+++ b/css/exercises/3_youtube/aside.css
@@ -77,6 +77,7 @@
 }
 
 .aside__item__title {
+  width: 128px;
   margin-left: 24px;
   font-size: 14px;
 }
@@ -86,6 +87,14 @@
   margin-left: 24px;
   width: 24px;
   height: 24px;
+}
+
+.aside__item__new {
+  margin-left: 6px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #065fd4;
 }
 
 .aside__link__list {
