--- a/exercises/3_youtube/layout.css
+++ b/exercises/3_youtube/layout.css
@@ -5,10 +5,7 @@
 }
 
 .aside {
-  margin-top: 56px;
   height: calc(100vh - 56px);
-}
-
-.section {
-  height: 100vh;
+  position: fixed;
+  top: 56px;
 }
