[Exercise] mosaic: add loader

--- a/exercises/7_mosaic/style.css
+++ b/exercises/7_mosaic/style.css
@@ -4,8 +4,25 @@
 
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
+}
+
+.description {
+  margin-top: 16px;
+}
+
+.loading {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: white;
+  opacity: 0.6;
+  z-index: 1;
 }
